--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   cached_network_image: ^3.4.1
   shimmer: ^3.0.0
   getwidget: ^6.0.0
+  skeletonizer: ^2.1.0+1
+  animate_do: ^4.2.0
 
 dev_dependencies:
   flutter_test:
