--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/zarnibwar/flutter_3.29
-FLUTTER_APPLICATION_PATH=/Users/zarnibwar/StudioProjects/mmbl_update
+FLUTTER_ROOT=/opt/homebrew/Caskroom/flutter/3.27.3/flutter
+FLUTTER_APPLICATION_PATH=/Users/mr.zarnibwar/StudioProjects/Myanmar_Business_Leader
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
