--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,12 +51,13 @@ dependencies:
   cached_network_image: ^3.4.1
   shimmer: ^3.0.0
   getwidget: ^6.0.0
-  skeletonizer: ^1.0.0
+#  skeletonizer:
   animate_do: ^4.2.0
   firebase_pagination: ^4.2.0
   flutter_launcher_icons: ^0.14.4
   flutter_native_splash: ^2.4.6
   rename_app: ^1.6.5
+  skeletonizer: ^2.1.0+1
 
 dev_dependencies:
   flutter_test:
