--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/Users/zarnibwar/Library/Android/sdk
 flutter.sdk=/Users/zarnibwar/flutter_3.29
-flutter.buildMode=debug
+flutter.buildMode=profile
 flutter.versionName=1.0.0
 flutter.versionCode=1
