--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   rename_app: ^1.6.5
   skeletonizer: ^1.4.3
   sizer: ^3.1.3
+  google_maps_flutter: ^2.13.1
+  
 
 dev_dependencies:
   flutter_test:
