--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/Users/zarnibwar/Library/Android/sdk
-flutter.sdk=/Users/zarnibwar/flutter_3.29
+sdk.dir=/Users/mr.zarnibwar/Library/Android/sdk
+flutter.sdk=/opt/homebrew/Caskroom/flutter/3.27.3/flutter
 flutter.buildMode=profile
 flutter.versionName=1.0.0
 flutter.versionCode=1
