--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   flutter_native_splash: ^2.4.6
   rename_app: ^1.6.5
-  skeletonizer: ^1.4.3
+  skeletonizer: ^2.1.0+1
   sizer: ^3.1.3
   google_maps_flutter: ^2.13.1
   
